--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<!--========================Header Starts==========================-->
+<!--=Header Starts-->
 
 	<div class="header">
 		
@@ -20,9 +20,7 @@
 
 	</div>
 
-<!--==========================Header Ends======================================-->
-
-<!--==============================Navigatin starts=============================-->
+<!--Header Ends====Navigatin starts===-->
 
 	<div class="navigation">
 		<ul>
