--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 
-<!--========================Mian Wrapper starts=============================-->
+<!-Mian Wrapper starts=->
 
 <div class="wrapper">
 
-<!--========================Header Starts======================================-->
+<!--Header Starts=->
 
 	<div class="header">
 		
@@ -23,9 +23,7 @@
 
 	</div>
 
-<!--==========================Header Ends======================================-->
-
-<!--==============================Navigatin starts=============================-->
+<!-Header Ends==Navigatin starts->
 
 	<div class="navigation">
 		<ul>
@@ -35,7 +33,7 @@
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
-<!--==============================Navigatin Ends=============================-->
+<!--Navigatin Ends>
 
 
 <div class="content">
